objects/CMN_WebserviceSetting__mdt.object
<CustomObject>
    <description>Use this to register various web service handlers and their settings such as endpoint, named credentials etc.</description>
    <fields>
        <fullName>CMN_AddStackTraceToExceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then when an error is encountered, the system will add the stack track to the errors lists on Queue Item and in responses.</description>
        <label>Add Stack Trace to Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_AdditionalKey__c</fullName>
        <description>Depending on API; some API&apos;s require an additional key to be sent in the payload or added as a header. Use this field to store that value</description>
        <label>Additional Key</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_ApiKey__c</fullName>
        <description>Can be used to define additional information required when doing API all</description>
        <label>ApiKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_BackoffPeriod__c</fullName>
        <description>The field refers to a delay or waiting period implemented by a client when communicating with a web service</description>
        <label>Backoff Period (sec)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_ClientID__c</fullName>
        <description>OAuth Client ID</description>
        <label>ClientID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Client_Secret__c</fullName>
        <description>OAuth Client Secret</description>
        <label>Client Secret</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CompanyID__c</fullName>
        <description>The field is designed to store a unique identifier or code that corresponds to a specific company or organization</description>
        <label>CompanyID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_EndpointUrl__c</fullName>
        <description>Set the main URL for the endpoint when not using named credentials</description>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CMN_MaxRetriesNo__c</fullName>
        <description>Number of retries allowed</description>
        <label>Max Retries No.</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_NamedCredential__c</fullName>
        <description>The field is used to store or reference a named credential related to web service</description>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Password__c</fullName>
        <description>The field is used to store password related to web service</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Path__c</fullName>
        <description>Relative path for a service call; prefixed by the URL provided either by a Named Credential or the Endpoint URL field</description>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Username__c</fullName>
        <description>The field represents a username associated with a webservice</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Webservice Setting</label>
    <listViews>
        <fullName>CMN_AllDetail</fullName>
        <columns>DeveloperName</columns>
        <columns>CMN_NamedCredential__c</columns>
        <columns>CMN_Path__c</columns>
        <columns>CMN_ClientID__c</columns>
        <columns>CMN_Client_Secret__c</columns>
        <columns>CMN_Username__c</columns>
        <columns>CMN_Password__c</columns>
        <columns>CMN_AddStackTraceToExceptions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMN_ExampleServices</fullName>
        <columns>DeveloperName</columns>
        <columns>CMN_NamedCredential__c</columns>
        <columns>CMN_Path__c</columns>
        <columns>CMN_ClientID__c</columns>
        <columns>CMN_Client_Secret__c</columns>
        <columns>CMN_Username__c</columns>
        <columns>CMN_Password__c</columns>
        <columns>CMN_AddStackTraceToExceptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>startsWith</operation>
            <value>CMN_</value>
        </filters>
        <label>Example Services</label>
    </listViews>
    <listViews>
        <fullName>CMN_GetServices</fullName>
        <columns>DeveloperName</columns>
        <columns>CMN_NamedCredential__c</columns>
        <columns>CMN_Path__c</columns>
        <columns>CMN_ClientID__c</columns>
        <columns>CMN_Client_Secret__c</columns>
        <columns>CMN_Username__c</columns>
        <columns>CMN_Password__c</columns>
        <columns>CMN_AddStackTraceToExceptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>contains</operation>
            <value>Get</value>
        </filters>
        <label>Get Services</label>
    </listViews>
    <listViews>
        <fullName>CMN_SetServices</fullName>
        <columns>DeveloperName</columns>
        <columns>CMN_NamedCredential__c</columns>
        <columns>CMN_Path__c</columns>
        <columns>CMN_ClientID__c</columns>
        <columns>CMN_Client_Secret__c</columns>
        <columns>CMN_Username__c</columns>
        <columns>CMN_Password__c</columns>
        <columns>CMN_AddStackTraceToExceptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>notContain</operation>
            <value>Get</value>
        </filters>
        <label>Set Services</label>
    </listViews>
    <pluralLabel>Webservice Settings</pluralLabel>
</CustomObject>